--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
 </head>
+
 <body>
     <h1>Home Page</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto enim nulla odit temporibus, veritatis
+        consequuntur. Numquam consectetur impedit nisi natus accusamus aut odio. Perferendis aliquid molestias quasi
+        doloremque libero at!</p>
 </body>
+
 </html>
