Added a new section with a title

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto enim nulla odit temporibus, veritatis
         consequuntur. Numquam consectetur impedit nisi natus accusamus aut odio. Perferendis aliquid molestias quasi
         doloremque libero at!</p>
+
+    <section>
+        <h2>Sectino Title</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor distinctio iure dolorem accusamus nisi nihil,
+            ex odio voluptatibus illo error molestias amet tenetur eveniet ea accusantium perspiciatis facere blanditiis
+            asperiores.</p>
+    </section>
 </body>
 
 </html>
